--- a/public/forkongithub.css
+++ b/public/forkongithub.css
@@ -40,8 +40,10 @@
         overflow: hidden;
         height: 200px;
         z-index: 9999;
+        box-sizing: content-box;
     }
     #forkongithub a {
+        box-sizing: content-box;
         width: 200px;
         position: absolute;
         top: 60px;
