--- a/src/styles/global/global.css
+++ b/src/styles/global/global.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
@@ -8,6 +11,9 @@ body {
 }
 pre {
     background-color: #161b22 !important;
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid #c9d1d9;
 }
 code {
     background: #161b22 !important;
