--- a/src/pages/Home/WeekOne/WeekOne.module.scss
+++ b/src/pages/Home/WeekOne/WeekOne.module.scss
@@ -4,5 +4,13 @@
     .demoWrapper {
         margin-bottom: 30px;
         margin-top: 30px;
+
+        > div {
+            &:first-child {
+                padding-top: 30px;
+                padding-bottom: 30px;
+                border: 1px solid white;
+            }
+        }
     }
 }
